# useful_functions

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Useful.hpp  UsefulTemplates.hpp
src/: math.cpp  vector.cpp
src/test/: test_math.cpp  test_vector.cpp
